fixed text-align on portrait cipher

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
         width: auto;
     }
     #content table{
-        position: absolute;
+        position: fixed;
         top: 40%;
         right: -5%;
         transform: translate(-40%, 0);
@@ -54,7 +54,6 @@ body {
     }
     #content table {
         position: fixed;
-        text-align: center;
         bottom: 18%;
         left: 50%;
         transform: translate(-50%, -18%);
